--- a/ClinicaAppDA/ClinicaAppDA.csproj
+++ b/ClinicaAppDA/ClinicaAppDA.csproj
@@ -13,4 +13,10 @@
     <ProjectReference Include="..\ClinicaAppBO\ClinicaAppBO.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="ClinicaAppBO">
+      <HintPath>..\ClinicaAppBO\bin\Debug\netcoreapp3.1\ClinicaAppBO.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
