--- a/ClinicaAppFrontEnd/ClinicaAppFrontEnd.csproj
+++ b/ClinicaAppFrontEnd/ClinicaAppFrontEnd.csproj
@@ -125,6 +125,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="HistoricoConsultas.aspx" />
     <Content Include="MenuPrincipal.aspx" />
     <Content Include="RegisterForm.aspx" />
     <Content Include="RegistoConsulta.aspx" />
@@ -188,6 +189,13 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="HistoricoConsultas.aspx.cs">
+      <DependentUpon>HistoricoConsultas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HistoricoConsultas.aspx.designer.cs">
+      <DependentUpon>HistoricoConsultas.aspx</DependentUpon>
     </Compile>
     <Compile Include="MenuPrincipal.aspx.cs">
       <DependentUpon>MenuPrincipal.aspx</DependentUpon>
