--- a/ClinicaAppFrontEnd/ClinicaAppFrontEnd.csproj
+++ b/ClinicaAppFrontEnd/ClinicaAppFrontEnd.csproj
@@ -106,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="CC.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -124,9 +125,11 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="MB.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="HistoricoConsultas.aspx" />
     <Content Include="MenuPrincipal.aspx" />
+    <Content Include="MetodoPagamento.aspx" />
     <Content Include="RegisterForm.aspx" />
     <Content Include="RegistoConsulta.aspx" />
     <Content Include="Scripts\bootstrap.js" />
@@ -173,6 +176,13 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="CC.aspx.cs">
+      <DependentUpon>CC.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CC.aspx.designer.cs">
+      <DependentUpon>CC.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -203,6 +213,13 @@
     </Compile>
     <Compile Include="MenuPrincipal.aspx.designer.cs">
       <DependentUpon>MenuPrincipal.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MetodoPagamento.aspx.cs">
+      <DependentUpon>MetodoPagamento.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MetodoPagamento.aspx.designer.cs">
+      <DependentUpon>MetodoPagamento.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterForm.aspx.cs">
@@ -239,6 +256,13 @@
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="MB.aspx.cs">
+      <DependentUpon>MB.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MB.aspx.designer.cs">
+      <DependentUpon>MB.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
